# Industrial-operations-AI-copilot

./: .gitignore  README.md  main.py  pyproject.toml
